# WiseYoda

./: .gitignore  .pre-commit-config.yaml  Brewfile  Brewfile.lock.json  Makefile  README.md  pyproject.toml
.github/workflows/: python-testing.yml
tests/: __init__.py  conftest.py  test_api.py  test_ascii_anim.py  test_cli.py  test_export_pipe.py  test_models.py  test_remind_cli.py  test_resolve_path.py  test_schema.py  test_themes.py  test_wisdom_store.py  test_yoda_style.py
wise_yoda/: __init__.py  api.py  ascii_anim.py  cli.py  export_fmt.py  remind.py  themes.py  wisdom.py  yoda_style.py
wise_yoda/data/: quotes.json
