[tool.poetry]
name = "wiseyoda"
version = "1.0.0"
description = "Quote the wise and powerful master Yoda."
authors = ["Mika Ayenson <Mika.ayenson@elastic.co>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "wise_yoda" }]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Topic :: Security",
    "Typing :: Typed",
]
keywords = ["Star Wars", "Yoda", "Quotes"]
repository = "https://github.com/Mikaayenson/WiseYoda"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Mikaayenson/WiseYoda/issues"

[tool.poetry.scripts]
wiseyoda    = 'wise_yoda.cli:main'

[tool.poetry.dependencies]
python         = "^3.8"
marshmallow-dataclass = "^8.5.10"

[tool.poetry.group.dev.dependencies]
pytest     = "^7.2.0"
pre-commit = "^2.20.0"
black      = "^22.10.0"
flake8     = "^5.0.4"
isort      = "^5.10.1"
pylint     = "^2.15.5"
devtools   = { extras = ["pygments"], version = "^0.9.0" }
pytest-html = "^3.2.0"
pytest-tap = "^3.3"
pytest-cov = "^4.0.0"
py = ">=1.8.2"
ansi2html = "^1.8.0"
pytest-mypy = "^0.10.3"
lxml = "^4.9.2"

[build-system]
requires      = ["setuptools==65.6.1", "poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths  = ["."]

[tool.isort]
profile = "black"

[tool.pyright]
include = ["wise_yoda", "tests"]
exclude = ["**/__pycache__"]
