[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "wiseyoda"
version = "2.2.0"
description = "CLI and library: wisdom from Master Yoda — bundled Clone Wars–style lessons, search, and colorful terminal output."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Mika Ayenson", email = "Mika.ayenson@elastic.co" }]
keywords = ["star-wars", "yoda", "quotes", "cli", "typer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.10",
    "rich>=13.9",
    "typer>=0.15",
]

[project.urls]
Homepage = "https://github.com/Mikaayenson/WiseYoda"
Repository = "https://github.com/Mikaayenson/WiseYoda"
Issues = "https://github.com/Mikaayenson/WiseYoda/issues"

[project.scripts]
wiseyoda = "wise_yoda.cli:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "httpx>=0.28",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[tool.hatch.build.targets.sdist]
include = ["wise_yoda", "tests", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["wise_yoda"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=wise_yoda --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["wise_yoda", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
